Added new view for collections and changed title to match in the collections table

--- a/app/views/photos/new.html.erb
+++ b/app/views/photos/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="new-photo-form">
+  <div class="new-form">
     <%= simple_form_for(@photo) do |f| %>
       <%= f.season %>
       <%= f.match %>
