--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,6 @@
 <div class="navbar navbar-expand-sm bg-primary navbar-lewagon">
-  <h3 class="text-light m-2 ps-2">Fisher Photogoraphy</h3>
+  <h3>
+    <%= link_to "Fisher Photogoraphy", collections_path, class: "text-light m-2 ps-2 text-decoration-none" %>
+  </h3>
   <%= link_to "Add pictures", new_collection_path, class: "nav-link btn btn-outline-light outline-none me-4" %>
 </div>
