--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -3,15 +3,25 @@
   <div class="collect-grid">
     <div>
       <% @collections.each do |collection| %>
-        <div id="carousel<%= collection.id %>" class="carousel slide" data-ride="carousel">
-          <div class="carousel-inner">
-            <%= collection.photos.each_with_index do |photo, index| %>
-              <div class="carousel-item <%= 'active' if index.zero? %>">
-                <%= cl_image_tag photo.key, class: "d-block h-100 w-100 img-fluid" %>
-              </div>
-            <% end %>
+        <%= link_to collection_path(collection), class: "card-link" do %>
+          <div id="carousel<%= collection.id %>" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+              <%= collection.photos.each_with_index do |photo, index| %>
+                <div class="carousel-item <%= 'active' if index.zero? %>">
+                  <%= cl_image_tag photo.key, class: "d-block h-10 w-10 img-fluid" %>
+                </div>
+              <% end %>
+            </div>
+            <a class="carousel-control-prev" href="#carousel<%= collection.id %>" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carousel<%= collection.id %>" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
           </div>
-        </div>
+        <% end %>
       <% end %>
     </div>
   </div>
