--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -2,5 +2,10 @@
   <h3>
     <%= link_to "Fisher Photogoraphy", collections_path, class: "text-light m-2 ps-2 text-decoration-none" %>
   </h3>
-  <%= link_to "Add pictures", new_collection_path, class: "nav-link btn btn-outline-light outline-none me-4" %>
+  <% if user_signed_in? %>
+    <%= link_to "Add pictures", new_collection_path, class: "nav-link btn btn-outline-light outline-none me-4" %>
+    <%= link_to "Log out", destroy_user_session_path, data: {turbo_method: :delete} %>
+  <% else %>
+    <%= link_to "Sign up", new_user_registration_path %>
+  <% end %>
 </div>
