Started working on download button and frontend

--- a/app/views/collections/new.html.erb
+++ b/app/views/collections/new.html.erb
@@ -3,6 +3,7 @@
     <%= simple_form_for(@collection) do |f| %>
       <%= f.input :season %>
       <%= f.input :match %>
+      <%= f.input :photo, as: :file %>
       <%= f.submit %>
     <% end %>
   </div>
