--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,18 +1,38 @@
-.coll-card {
+.coll-card, .img-card {
   margin: 20px;
-  // border-radius: 25%;
-  height: 200px;
-  width: 315px;
-  background-color: black;
+  border: 3px solid dimgray;
+  border-radius: 24.5px;
+  width: 300px;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  align-items: center;
+  background-color: black;
 }
+
+.coll-card {
+  // border-radius: 25%;
+  height: 275px;
+  width: 375px;
+  // display: flex;
+  // flex-direction: column;
+  // justify-content: center;
+}
+
+// .img-card {
+  // height: 300px;
+// }
 
 a {
-  font-display: none;
+  width: 30%;
 }
 
-img {
-  object-fit: cover;
+// .img-container {
+//   max-width: 296px;
+// }
+
+.photo {
+  border-radius: 22.5px;
+  // height: 100%;
+  // width: 100%;
+  // object-fit: fill;
 }
