--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -1,22 +1,19 @@
 <div class="container d-flex flex-column justify-content-center">
   <div>
     <h3 class="title">Collections</h3>
-    <%= link_to "Add pictures", new_collection_path, class: "nav-link btn btn-outline-light outline-none me-4" %>
+    <%= link_to "Add pictures", new_collection_path, class: "nav-link btn btn-outline-light text outline-none me-4" %>
   </div>
   <div class="collect-grid d-flex justify-content-start">
-    <div class="d-flex flex-wrap">
+    <%# <div class="d-flex flex-wrap"> %>
       <% @collections.each do |collection| %>
         <%= link_to collection_path(collection) do %>
-          <div class="coll-card position-relative rounded-5">
-            <% if collection.images.exists? %>
-              <% collection.images[0].photos.each do |photo| %>
-                <%= cl_image_tag photo.key %>
-                <% break %>
-              <% end %>
-            <% end %>
+          <div class="coll-card position-relative">
+            <div class="img-container">
+              <%= cl_image_tag collection.photo.key, height: 250, crop: :fill, class: "photo" %>
+            </div>
           </div>
         <% end %>
       <% end %>
-    </div>
+    <%# </div> %>
   </div>
 </div>
