--- a/app/views/collections/show.html.erb
+++ b/app/views/collections/show.html.erb
@@ -4,11 +4,20 @@
     <%= link_to "Add pictures", new_collection_image_path(@collection, @image) %>
   </div>
   <div>
-    <%= @collection.images.each do |image| %>
-      <%= image.photos.each do |photo| %>
-        <div class="p-2">
-          <%= cl_image_tag photo.key %>
-        </div>
+    <% @collection.images.each do |image| %>
+      <% image.photos.each do |photo| %>
+        <%# <div class="card img-card p-2 rounded-4"> %>
+          <%= link_to collection_image_path(@collection, image), class: "photo text-decoration-none rounded-top-4" do %>
+            <div class="img-card">
+              <div class="img-container">
+                <%= cl_image_tag photo.key, class: "photo" %>
+              </div>
+              <div class="d-flex justify-content-between text-white">
+                <p>Views: <%= image.views %></p>
+              </div>
+            </div>
+          <% end %>
+        <%# </div> %>
       <% end %>
     <% end %>
   </div>
